# julio-gpt-backend

./: DockerFile  README.md  app.py  docker-compose.yml  openai_client.py  process.py  pyproject.toml  requirements.txt  var.py
Chatbot/: .gitignore  DockerFile  app.py  openai_client.py  pyproject.toml  requirements.txt
Chatbot/data/: ch1-servicio-social.md  ch2-sobre.md
chatbot-api/: .dockerignore  .env.example  DockerFile  package-lock.json  package.json  tsconfig.json
chatbot-api/markdown/: fines-educativos.md  introduccion.md  metodologia.md  politica.md  quienes-somos.md  valores.md
chatbot-api/public/markdown/: 1-instalaciones.md  1-sobre-nosotros.md  2-metodologia-y-politica.md  3-servicio-social.md  4-practica-profesional-y-taller-empleabilidad.md  6-aranceles.md
chatbot-api/src/: index.ts
chatbot-api/src/controllers/: chat.controllers.ts
chatbot-api/src/routes/: chat.routes.ts  index.ts
chatbot-api/src/shared/: config.ts
chatbot-api/src/shared/config/: env.ts  pinecone.ts
chatbot-api/src/shared/scripts/: delete-data.ts  ingest-data.ts
chatbot-api/src/shared/scripts/pinecone/: indexes-scripts.ts  ingest-data.ts
chatbot-api/src/shared/utils/: makechain.ts  pinecone-client.ts
