[tool.poetry]
name = "julio-gpt"
version = "0.1.0"
description = "Julio gpt Chatbot"
authors = ["Eliseo Arévalo <eliseoarevalo29@email.com>"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependencies]
python = "^3.12"

[tool.poetry.dependencies]
flask = "*"
flask-cors = "*"
openai = "*"
chromadb = "*"
